# Senko-san_to_Isshou_localizer

./: .env.example  .gitignore  README.MD  pyproject.toml
assets/ar/: translations.json
assets/ar/TextAsset/: StoryList_cn.bytes  StoryList_jp.bytes  VRstory0.bytes  VRstory1.bytes  VRstory2.bytes  VRstory3.bytes  VRstory4.bytes  story0.bytes  story1.bytes  story2.bytes  story3.bytes  story4.bytes
assets/de/: translations.json
assets/de/TextAsset/: StoryList.bytes  StoryList_cn.bytes  VRstory0.bytes  VRstory1.bytes  VRstory2.bytes  VRstory3.bytes  VRstory4.bytes  story0.bytes  story1.bytes  story2.bytes  story3.bytes  story4.bytes
assets/en/: translations.json
assets/en/TextAsset/: 103.bytes  StoryList_cn.bytes  StoryList_jp.bytes  VRstory0.bytes  VRstory1.bytes  VRstory2.bytes  VRstory3.bytes  VRstory4.bytes  story0.bytes  story1.bytes  story2.bytes  story3.bytes  story4.bytes
assets/en/img/: README.MD
assets/es/: translations.json
assets/es/TextAsset/: StoryList.bytes  StoryList_cn.bytes  StoryList_en.bytes  VRstory0.bytes  VRstory1.bytes  VRstory2.bytes  VRstory3.bytes  VRstory4.bytes  story0.bytes  story1.bytes  story2.bytes  story3.bytes  story4.bytes
assets/fr/: translations.json
assets/hi/: translations.json
assets/id/: translations.json
assets/ko/: translations.json
assets/nl/: translations.json
assets/pt/: translations.json
assets/ru/: translations.json
assets/zh/: translations.json
fonts/: README.md
tools/translation_tools/: README.MD  convert_assets.py  font_replace.py  main.py  translate_assets.py
(+274 files in other folders)
